API de Mercado Pago realizado. Ainda em testes

--- a/.env
+++ b/.env
@@ -34,3 +34,8 @@ PUSHER_APP_ID=
 PUSHER_APP_KEY=
 PUSHER_APP_SECRET=
 PUSHER_APP_CLUSTER=mt1
+
+MP_APP_ID=7533062500955530
+MP_APP_SECRET=cBrB07fhTJbB0KbjiSU68BYpNYPP54rM
+MP_APP_ACCESS_TOKEN=TEST-7533062500955530-060811-cd34f0d58b7589b13cac87be001fb02c-365934417
+MP_NOTIFICATION_URL=http://localhost:8000/notifications/mp
