--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
         "codemancompany/laravel-mercadopago": "^1.07",
         "fideloper/proxy": "~3.3",
         "laravel/framework": "5.5.*",
-        "laravel/tinker": "~1.0"
+        "laravel/tinker": "~1.0",
+        "mercadopago/dx-php": "dev-master"
     },
     "require-dev": {
         "filp/whoops": "~2.0",
