--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "fideloper/proxy": "~3.3",
         "laravel/framework": "5.5.*",
         "laravel/tinker": "~1.0",
+        "livepixel/mercado-pago": "^1.0",
         "mercadopago/dx-php": "dev-master"
     },
     "require-dev": {
